<resources>
    <string name="app_name">login_register_app</string>
    <string name="mapApiKey">AIzaSyASdI1qm9YE0y_aldE2orX06Qy0XmL7T00</string>

    <string name="login">Login</string>
    <string name="new_user_register_here">New user? Register here!</string>
    <string name="select_your_language">Select your language!</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="enter_password">Enter password...</string>
    <string name="btnLogin">Login</string>
    <string name="enter_email">Enter email...</string>
    <string name="language">Language</string>
    <string name="already_a_user_login_here">Already a user? Login here!</string>
    <string name="register">Register</string>
    <string name="enter_email_reg">Enter email...</string>
    <string name="confirm_password">Confirm password...</string>
    <string name="register_title">Register</string>
    <string name="enter_password_reg">Enter password...</string>
    <string name="language_reg">Language</string>
    <string name="logout">Logout</string>
    <string name="success_register">User created successfully!</string>
    <string name="error_register">Register error </string>
    <string name="passwords_not_match">Passwords not match!</string>
    <string name="log_in_success">Logged in successfully!</string>
    <string name="log_in_error">Login error </string>
    <string name="log_out_main">Logged out successfully!</string>
    <string name="about">About</string>
    <string name="image_labeling">Image Labeling</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="sights">Sights</string>
    <string name="back">Back</string>
    <string name="open_map">Open map</string>
    <string name="find_your_nearest_sight">Find your nearest sight</string>
    <string name="find">Find</string>
    <string name="nearest_sight">Nearest sight</string>
    <string name="image_to_recognize">Image to recognize</string>
    <string name="load_image">Load Image</string>
    <string name="your_image">Your Image</string>
    <string name="load_from_camera">From camera</string>
    <string name="load_from_gallery">From storage gallery</string>
    <string name="email_empty">Email cannot be empty!</string>
    <string name="password_empty">Password cannot be empty!</string>
    <string name="email_not_valid">Email is not valid!</string>
    <string name="password_length_error">Password must be at least 6 characters!</string>
    <string name="password_confirm">Confirm password please!</string>
    <string name="translate">Translate</string>
    <string name="translate_to">Translate to</string>
    <string name="profile">Profile</string>
    <string name="date_account_created">Date account created</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="update_user_profile">Your profile is updated successfully!</string>
    <string name="text_to_be_recognize">Text to be recognize</string>
    <string name="detect_text">Detect Text</string>
    <string name="image_detect_no_txt">Image contains no text</string>
    <string name="original_text">Original Text</string>
    <string name="translated_text">Translated Text</string>
    <string name="change_language">Change Language</string>
    <string name="text_language">Text Language</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sight_name">Sight name</string>
    <string name="city">City/Region</string>
    <string name="lang_no_support">Language not supported by the application</string>
    <string name="view_sights_in_format">View sights in format</string>
    <string name="open_list">Open list</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_the_email_in_the_application">Enter the email in the application</string>
    <string name="recover">Recover</string>
    <string name="check_inbox_recover">Please check your inbox for password reset link.</string>
    <string name="warning">Warning!</string>
    <string name="check_your_spam_folder">Check your spam folder!</string>
    <string name="loading">Loading...</string>


    <string-array name="langs_noEn">
        <item></item>
        <item>Greek</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="langs_noEl">
        <item></item>
        <item>English</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="langs_noDe">
        <item></item>
        <item>Greek</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="langs_noEs">
        <item></item>
        <item>Greek</item>
        <item>English</item>
        <item>German</item>
    </string-array>
    <string-array name="langs_no">
        <item></item>
    </string-array>

</resources>