<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4E7F7"
    tools:context=".activities.TxtRecognitionActivity">

    <Button
        android:id="@+id/btnBackTxtRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#D33A3A"
        android:gravity="center"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageTxtRec"
        android:layout_width="252dp"
        android:layout_height="228dp"
        app:layout_constraintEnd_toEndOf="@+id/txtYourImageRec"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/txtYourImageRec"
        app:layout_constraintTop_toBottomOf="@+id/txtYourImageRec"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtRecResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageTxtRec"
        app:layout_constraintStart_toStartOf="@+id/imageTxtRec"
        app:layout_constraintTop_toBottomOf="@+id/imageTxtRec" />

    <TextView
        android:id="@+id/txtRecLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/text_to_be_recognize"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTxtRecLoadImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="#235B91"
        android:gravity="center"
        android:text="@string/load_image"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtRecLabel"
        app:layout_constraintStart_toStartOf="@+id/txtRecLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtRecLabel" />

    <TextView
        android:id="@+id/txtYourImageRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/your_image"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnTxtRecLoadImg"
        app:layout_constraintStart_toStartOf="@+id/btnTxtRecLoadImg"
        app:layout_constraintTop_toBottomOf="@+id/btnTxtRecLoadImg" />

    <Button
        android:id="@+id/btnTxtRecTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#235B91"
        android:gravity="center"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackTxtRec"
        app:layout_constraintEnd_toEndOf="@+id/txtRecResult"
        app:layout_constraintStart_toStartOf="@+id/txtRecResult" />

    <Button
        android:id="@+id/btnTxtRecDetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#235B91"
        android:gravity="center"
        android:text="@string/detect_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageTxtRec"
        app:layout_constraintStart_toStartOf="@+id/imageTxtRec"
        app:layout_constraintTop_toBottomOf="@+id/imageTxtRec" />

</androidx.constraintlayout.widget.ConstraintLayout>